# tech-future-prototype

./: manage.py  pyproject.toml
tech_future_prototype/: asgi.py  settings.py  urls.py  wsgi.py
tech_future_prototype/models/: course.py  file.py  instructor.py  lecture.py  school.py  student.py
