[tool.poetry]
name = "tech_future-prototype"
version = "0.1.0"
description = ""
authors = ["vitor <vitor@caletagaming.com>"]


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2 = "^2.9.10"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
